[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-structured-retry-py"
version = "0.1.0"
description = "Retry LLM calls by injecting validation errors as follow-up messages"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "retry", "structured-output", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/llm-structured-retry-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_structured_retry = ["py.typed"]
